fix: set welcome hero photo to display: none, fixed font-sizes on small devices

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -135,11 +135,14 @@
 
 @media (max-width: 768px) {
     .welcome__traits {
-        font-size: 2vw;
+        font-size: var(--font-small);
     }
 
     .welcome__description {
-        font-size: 3vw;
+        font-size: var(--font-small);
+    }
+    .welcome__hero {
+        display: none;
     }
 
     h1 {
